<resources>
    <string name="app_name" translatable="false">foodDeliveryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gofood" translatable="false">GoFood</string>
    <string name="_1" translatable="false">1</string>
    <string name="search_for_food">Search for food</string>
    <string name="delivery_location">Delivery location</string>
    <string name="place_the_order">Place the order</string>
    <string name="it_s_so_cold_and_lonely_here">It\'s so cold and lonely here...</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_signup_with">or signup with</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="order_received">Order received!</string>
    <string name="it_will_arrive_at_your_delivery_location_in_20_30_min">It will arrive at your delivery location in 20-30 min!</string>
    <string name="check_out">Check Out</string>
</resources>